--- a/style.css
+++ b/style.css
@@ -758,13 +758,16 @@ section.product-collection > * {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .primary-header::before {
   content: "";
   position: absolute;
-  inset: 0 0 90vh 0;
+  inset: 0 0 0 50%;
   border-bottom: 1px solid var(--clr-neutral-400);
+  width: calc(100% + 2.5rem);
+  transform: translateX(-50%);
 }
 
 .logo {
@@ -795,7 +798,7 @@ section.product-collection > * {
     margin-left: 2rem;
   }
   .primary-header::before {
-    width: calc(100% - 40px);
+    width: 100%;
     max-width: 1100px;
     margin-inline: auto;
   }
